# sensor-proyect

./: .gitignore  LICENSE  README.md
common/: Cargo.toml
common/bindings/: PlaceChange.ts
common/bindings/api/endpoints/place/: GetPlace.ts  PostPlace.ts
common/bindings/api/endpoints/sensor/: ApiUserSensor.ts  DeleteSensor.ts  PostSensor.ts  PutPlace.ts
common/bindings/api/endpoints/sensor_data/: PostSensorData.ts  PostSensorDataResponse.ts
common/bindings/api/endpoints/session/: ApiSession.ts  SensorLogin.ts  UserLogin.ts
common/bindings/api/endpoints/user/: PutUserResponse.ts
common/bindings/api/types/: ApiColor.ts  ApiDescription.ts  ApiPubKey.ts
common/src/: ble_protocol.rs  lib.rs
common/src/auth/: keys.rs
common/src/endpoints_io/: health.rs  mod.rs  place.rs  sensor.rs  sensor_data.rs  session.rs  user.rs
common/src/types/: mod.rs  zstr20.rs
common/src/types/validate/: api_color.rs  api_description.rs  api_email.rs  api_entity_name.rs  api_pub_key.rs  api_raw_password.rs  device_id.rs  mod.rs
sensor-app/: '  .gitignore  .prettierrc  README.md  app.json  bindings  build-android.sh  package-lock.json  package.json  tsconfig.json
sensor-app/android/: settings.gradle
sensor-app/android/app/: build.gradle
sensor-app/api/: auth.ts  common.ts  get_sensor_data.ts  place_crud.ts  sensor_crud.ts  user_summary.ts
sensor-app/app/: AddPlaceScreen.tsx  AddSensorScreen.tsx  SensorData.tsx  SensorDetail.tsx  _layout.tsx  account.tsx  home.tsx  index.tsx  login.tsx  sensor_detail.tsx
sensor-app/app/(tabs)/: _layout.tsx  account.tsx  explore.tsx  home.tsx  index.tsx
sensor-app/components/: AppProvider.tsx  BackgroundView.tsx  BindedColorPicker.tsx  CheckboxesSelector.tsx  CloseButton.tsx  DataChart.tsx  FeedbackModal.tsx  LoadingScreen.tsx  PlaceCard.tsx  PlacesScreen.tsx  RefreshButton.tsx  SensorCard.tsx  SensorCrudModal.tsx  ThemedForm.tsx  ThemedHeader.tsx  ThemedList.tsx  ThemedText.tsx  ThemedView.tsx
sensor-app/components/ui-elements/: BackgroundView.tsx  ErrorBox.tsx  LabelValue.tsx  ThemedButton.tsx  ThemedForm.tsx  (+3 more)
sensor-app/constants/: api_colors.ts
sensor-app/helpers/: auth.ts  equidistantIndices.ts  objectWork.ts  sensorDataLoader.ts  significantFigures.ts  timeDisplay.ts  withAlpha.ts
sensor-app/hooks/: useApi.ts  useAuth.ts  useBLE.ts  useInvertedLayerColor.ts  useLayerColor.ts  useRedirect.ts  useSensorDataApi.ts  useSession.ts  useSummary.ts
sensor-app/model/: ShapedData.ts
sensor-app/persistence/: SessionData.ts
sensor-app/temp/: divide.py
sensor-app/ui/: theme.ts
sensor-client/: .gitignore  Cargo.toml  sdkconfig.defaults
sensor-client/src/: .main.rs.old  ble_protocol.rs  client_state.rs  main.rs  main.rs.old  modem_sleep.rs  persistence.rs  private.rs  sensors.rs  server_communicator.rs  wifi_connector.rs
sensor-client/src/helpers/: mod.rs  zstr20.rs
sensor-lib/: Cargo.toml
sensor-lib/bindings/: Aht10Data.ts  AnySensorData.ts  PlaceColor.ts  PlaceSummary.ts  Scd4xData.ts  SensorColor.ts  SensorKind.ts  SensorSummary.ts  UserSummary.ts
sensor-lib/src/: lib.rs
sensor-server/: .env  Cargo.toml  Cross.toml  README.md  cross-build.sh  diesel.toml  remote_db.sqlite  test_db.sqlite3  test_db.sqlite3-shm  test_db.sqlite3-wal  x86_64-unknown-linux-gnu.Dockerfile.cross
sensor-server-axum/: Cargo.toml  README.md
sensor-server-axum/bindings/: ApiId.ts
sensor-server-axum/src/: lib.rs  main.rs  model.rs  schema.rs  sensor_server.rs
sensor-server/bindings/: SensorChange.ts
sensor-server/bindings/api/endpoints/health/: GetHealth.ts
sensor-server/bindings/api/endpoints/place/: ApiUserPlace.ts  DeletePlace.ts  GetPlace.ts  PostPlace.ts
sensor-server/bindings/api/endpoints/sensor/: ApiUserSensor.ts  GetSensor.ts  GetSensorResponse.ts  PostSensor.ts  PutSensor.ts
sensor-server/bindings/api/endpoints/sensor_data/: GetSensorData.ts  PostSensorData.ts  PostSensorDataResponse.ts
sensor-server/bindings/api/endpoints/session/: GetSession.ts  PostSession.ts  PutSession.ts
sensor-server/bindings/api/endpoints/user/: ApiUser.ts  GetUser.ts  PostUser.ts  PutUser.ts
sensor-server/bindings/api/types/: ApiEmail.ts  ApiEntityName.ts  ApiRawPassword.ts  ApiUsername.ts  DeviceId.ts
sensor-server/migrations/2025-06-30-151043_create_aht10data/: down.sql  up.sql
sensor-server/migrations/2025-07-06-153844_first_migration/: down.sql  up.sql
sensor-server/migrations/2025-08-13-101248_First/: up.sql
sensor-server/src/: lib.rs  main.rs  model.rs  models.rs  schema.rs  sensor_server.rs
sensor-server/src/api/: mod.rs  route.rs
sensor-server/src/api/endpoints/: health.rs  mod.rs  place.rs  sensor.rs  sensor_data.rs  session.rs  user.rs
sensor-server/src/api/types/: device_id.rs  mod.rs
sensor-server/src/api/types/validate/: api_color.rs  api_description.rs  api_email.rs  api_entity_name.rs  api_raw_password.rs  api_username.rs  mod.rs
sensor-server/src/auth/: claims.rs  keys.rs  mod.rs  sensor_claims.rs
sensor-server/src/db/: colors.rs  mod.rs  model.rs  schema.rs  sensor_data.rs  user_places.rs  user_sensors.rs  users.rs
sensor-server/src/helper/: mod.rs
sensor-server/src/middleware/: mod.rs
sensor-server/src/middleware/extractor/: mod.rs
sensor-server/src/server/: mod.rs
sensor-server/src/state/: mod.rs  poisonable_identifier.rs
(+82 files in other folders)
