[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["simple"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
log = "0.4.27"
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_valid = "1.0.5"
ts-rs = "11.0.1"

[dev-dependencies]
rand = "0.9.2"
