[package]
name = "sensor-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
futures-util = "0.3.31"
sensor-lib = { path = "../sensor-lib" }
serde_json = "1.0.140"
diesel = { version = "2.2.11", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
dotenvy = "0.15.7"
log = "0.4.27"
env_logger = "0.11.8"
once_cell = "1.21.3"

[dev-dependencies]
chrono = "0.4.41"
diesel_migrations = "2.2.0"
rand = "0.9.1"
