[package]
name = "sensor-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["chrono", "postgres", "r2d2", "serde_json"] }
env_logger = "0.11.8"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
sensor-lib = { path = "../sensor-lib/"}
dotenv = "0.15.0"
diesel_migrations = "2.2.0"
r2d2 = "0.8.10"
ts-rs = "11.0.1"
rand = "0.9.2"

[dev-dependencies]
axum-test = "17.3.0"
